# DMFTtools

./: .gitignore  CMakeLists.txt  Makefile  README.md  install.sh
_install/src/: DMFT_TIGHT_BINDING.f90  dmft_tools_version.inc
cmake/: FortranCompilerConfig.cmake  PostConfig.cmake
cmake/Modules/: HomeInstall.cmake  PostBuildDmftTools.cmake
etc/: dmft_tools.pc  dmft_tools.pc.in
etc/environment_modules/: module  module.in
src/: CMakeLists.txt  DMFT_EKIN.f90  DMFT_FFTGF.f90  DMFT_GLOC.f90  DMFT_MISC.f90  DMFT_TIGHT_BINDING.f90  DMFT_TOOLS.f90  DMFT_TOOLS_VERSION.f90  DMFT_WEISS_FIELD.f90  Makefile  dmft_ekin_normal.f90  dmft_ekin_normal_mpi.f90  dmft_gloc_matsubara_normal.f90  dmft_gloc_matsubara_normal_mpi.f90  dmft_gloc_matsubara_superc.f90  dmft_gloc_matsubara_superc_mpi.f90  dmft_gloc_realaxis_normal.f90  dmft_gloc_realaxis_normal_mpi.f90  dmft_gloc_realaxis_superc.f90  dmft_gloc_realaxis_superc_mpi.f90  dmft_tools_version.in  dmft_tools_version.inc  dmft_tools_version_current_sha1.inc  tight_binding_build_hkR_model.f90  tight_binding_build_hk_model.f90  tight_binding_io_hloc.f90  tight_binding_io_w90hk.f90  tight_binding_solve_hk.f90  tight_binding_solve_hkR_path.f90  tight_binding_solve_hk_path.f90
src/.module_archive/: DMFT_GLOC.OLDF90
src/.module_archive/DMFT_VECTORS/: CMakeLists.txt
src/ARCHIVED_DMFT_GF/: CMakeLists.txt  DMFT_GF.f90  GF_COMMON.f90  GLOC_MATSUBARA.f90  GLOC_REALAXIS.f90
src/ARCHIVED_DMFT_WEISS_FIELD/: CMakeLists.txt  DMFT_WEISS_FIELD.f90  SC_COMMON.f90  SC_DELTA.f90  SC_GLOBAL.f90  SC_WEISS.f90
src/DMFT_CONVERGENCE/: CMakeLists.txt  DMFT_CONVERGENCE.f90  error_convergence_global.f90  error_convergence_local.f90  error_convergence_relative.f90  error_msg_dim0.f90  error_msg_dim1.f90  error_msg_dim3.f90  error_write_file_dim0.f90  error_write_file_dim1.f90  error_write_file_dim2.f90  error_write_file_dim3.f90
src/DMFT_CTRL_VARS/: CMakeLists.txt  DMFT_CTRL_VARS.f90
src/DMFT_EKIN/: CMakeLists.txt  DMFT_EKIN.f90  dmft_ekin_normal.f90  dmft_ekin_normal_mpi.f90  dmft_ekin_superc.f90  dmft_ekin_superc_mpi.f90
src/DMFT_FFT/: CMakeLists.txt  DMFT_FFTGF.f90
src/DMFT_GF/: CMakeLists.txt  DMFT_GF.f90  DMFT_GFIO.f90  DMFT_GFOLD.f90  GF_COMMON.f90  GF_COMMON_OLD.f90  GF_GK.f90  GF_GLOC.f90  GF_IO.f90  GK_MATSUBARA.f90  GK_REALAXIS.f90  GLOC_MATSUBARA.f90  GLOC_REALAXIS.f90
src/DMFT_GFIO/: CMakeLists.txt  DMFT_GFIO.f90  print_gf.f90  read_gf.f90
src/DMFT_GK/: CMakeLists.txt  DMFT_GK.f90  GK_COMMON.f90  GK_MATSUBARA.f90  GK_REALAXIS.f90  dmft_gk_matsubara_normal.f90  dmft_gk_matsubara_normal_mpi.f90  dmft_gk_matsubara_superc.f90  dmft_gk_matsubara_superc_mpi.f90  dmft_gk_realaxis_normal.f90  dmft_gk_realaxis_normal_mpi.f90  dmft_gk_realaxis_superc.f90  dmft_gk_realaxis_superc_mpi.f90
src/DMFT_GLOC/: .dmft_gloc_matsubara_normal_mpi.f90.swp  CMakeLists.txt  DMFT_GLOC.f90  GLOC_COMMON.f90  GLOC_MATSUBARA.f90  GLOC_REALAXIS.f90  dmft_gloc_matsubara_normal.f90  dmft_gloc_matsubara_normal_mpi.f90  dmft_gloc_matsubara_superc.f90  dmft_gloc_matsubara_superc_mpi.f90  dmft_gloc_realaxis_normal.f90  dmft_gloc_realaxis_normal_mpi.f90  dmft_gloc_realaxis_superc.f90  dmft_gloc_realaxis_superc_mpi.f90
src/DMFT_INTERACTION/: CMakeLists.txt  DMFT_INTERACTION.f90  dmft_interaction_mpi.f90  dmft_interaction_serial.f90  dmft_interaction_setKanamori_mpi.f90  dmft_interaction_setKanamori_serial.f90
src/DMFT_MISC/: CMakeLists.txt  DMFT_MISC.f90
src/DMFT_TIGHT_BINDING/: CMakeLists.txt  DMFT_TIGHT_BINDING.f90  TB_BASIS.f90  TB_BUILD.f90  TB_COMMON.f90  TB_EFERMI.f90  TB_FSURF.f90  TB_IO.f90  TB_SOLVE.f90  TB_WANNIER90.f90  dipole_w90hr.f90  dipole_w90hr_mpi.f90  tight_binding_basis.f90  tight_binding_build_hk_model.f90  tight_binding_grid.f90  tight_binding_io_Hk.f90  tight_binding_io_hloc.f90  tight_binding_io_w90hk.f90  tight_binding_io_w90hr.f90  tight_binding_io_w90hr_mpi.f90  tight_binding_solve_hk.f90  tight_binding_w90_helper.f90
src/DMFT_TIGHT_BINDING/.repo/: DMFT_TIGHT_BINDING.f90  tight_binding_build_hk_model.f90  tight_binding_build_hk_model_mpi.f90  tight_binding_io_hloc.f90  tight_binding_w90_helper.f90
src/DMFT_TIGHT_BINDING/w90hr/: dipole_w90hr.f90  read_Hr_w90_solve_Hk_along_BZpath.f90  tight_binding_build_hk_from_w90hr.f90  tight_binding_build_hk_from_w90hr_mpi.f90
src/DMFT_WEISS_FIELD/: CMakeLists.txt  DMFT_WEISS_FIELD.f90  SC_COMMON.f90  SC_DELTA.f90  SC_GLOBAL.f90  SC_WEISS.f90  dmft_delta_bethe.f90  dmft_delta_bethe_mpi.f90  dmft_delta_normal.f90  dmft_delta_normal_mpi.f90  dmft_delta_superc.f90  dmft_delta_superc_mpi.f90  dmft_self_consistency.f90  dmft_self_consistency_mpi.f90  dmft_weiss_bethe.f90  dmft_weiss_bethe_mpi.f90  dmft_weiss_normal.f90  dmft_weiss_normal_mpi.f90  dmft_weiss_superc.f90  dmft_weiss_superc_mpi.f90
src/LEGACY_DMFT_GF/: CMakeLists.txt  DMFT_GF.f90  DMFT_GFIO.f90  GF_COMMON.f90  GK_MATSUBARA.f90  GK_REALAXIS.f90  LEGACY_DMFT_GF.f90  LEGACY_GF_COMMON.f90  LEGACY_GF_GK.f90  LEGACY_GF_GLOC.f90
src/LEGACY_DMFT_WEISS_FIELD/: CMakeLists.txt  DMFT_WEISS_FIELD.f90  LEGACY_DMFT_WEISS_FIELD.f90  LEGACY_SC_COMMON.f90  LEGACY_SC_DELTA.f90  LEGACY_SC_WEISS.f90  SC_COMMON.f90  SC_DELTA.f90  SC_GLOBAL.f90  SC_WEISS.f90
test/: Makefile  test.sh
test/src/: Makefile
test/src/DMFT_GF/: 01_test_dmft_tools_gf.f90
test/src/DMFT_WEISS_FIELD/: 01_test_dmft_tools_weiss.f90  Makefile
