# DMFT_TOOLS library
file(GLOB DMFT_TOOLS_LOCAL_SRC
  DMFT_TOOLS_VERSION.f90
  DMFT_FFTGF.f90
  DMFT_FFTAUX.f90
  DMFT_MISC.f90
  DMFT_CONVERGENCE.f90
  DMFT_VECTORS.f90
  DMFT_TIGHT_BINDING.f90
  DMFT_CTRL_VARS.f90
  DMFT_GLOC.f90
  DMFT_WEISS_FIELD.f90
  DMFT_EKIN.f90
  DMFT_TOOLS.f90 
  )
SET(DMFT_TOOLS_src ${DMFT_TOOLS_LOCAL_SRC})
ADD_LIBRARY(DMFT_TOOLSLIB OBJECT ${DMFT_TOOLS_src})
