file(GLOB ARCHIVED_DMFT_GF_LOCAL_SRC
  GF_COMMON.f90
  GK_MATSUBARA.f90
  GK_REALAXIS.f90
  GLOC_MATSUBARA.f90
  GLOC_REALAXIS.f90
  DMFT_GF.f90
  )
SET(ARCHIVED_DMFT_GF_src ${ARCHIVED_DMFT_GF_LOCAL_SRC})
ADD_LIBRARY(ARCHIVED_DMFT_GFLIB OBJECT ${ARCHIVED_DMFT_GF_src})
ADD_DEPENDENCIES(ARCHIVED_DMFT_GFLIB DMFT_CTRL_VARSLIB)
