file(GLOB DMFT_GF_LOCAL_SRC
  GF_COMMON.f90
  GF_COMMON_OLD.f90
  #
  GF_GLOC.f90
  GF_GK.f90
  DMFT_GF.f90
  DMFT_GFIO.f90
  #
  GK_MATSUBARA.f90
  GK_REALAXIS.f90
  GLOC_MATSUBARA.f90
  GLOC_REALAXIS.f90
  DMFT_GFOLD.f90
  )
SET(DMFT_GF_src ${DMFT_GF_LOCAL_SRC})
ADD_LIBRARY(DMFT_GFLIB OBJECT ${DMFT_GF_src})
ADD_DEPENDENCIES(DMFT_GFLIB DMFT_CTRL_VARSLIB)
