file(GLOB DMFT_TIGHT_BINDING_LOCAL_SRC
  DMFT_TIGHT_BINDING.f90
  )
SET(DMFT_TIGHT_BINDING_src ${DMFT_TIGHT_BINDING_LOCAL_SRC})
ADD_LIBRARY(DMFT_TIGHT_BINDINGLIB OBJECT ${DMFT_TIGHT_BINDING_src})
ADD_DEPENDENCIES(DMFT_TIGHT_BINDINGLIB DMFT_CTRL_VARSLIB)
ADD_DEPENDENCIES(DMFT_TIGHT_BINDINGLIB DMFT_GLOCLIB)
ADD_DEPENDENCIES(DMFT_TIGHT_BINDINGLIB DMFT_GFIOLIB)
