file(GLOB DMFT_WEISS_FIELD_LOCAL_SRC
  SC_COMMON.f90
  SC_WEISS.f90
  SC_DELTA.f90
  SC_GLOBAL.f90
  DMFT_WEISS_FIELD.f90
  )
SET(DMFT_WEISS_FIELD_src ${DMFT_WEISS_FIELD_LOCAL_SRC})
ADD_LIBRARY(DMFT_WEISS_FIELDLIB OBJECT ${DMFT_WEISS_FIELD_src})
ADD_DEPENDENCIES(DMFT_WEISS_FIELDLIB DMFT_CTRL_VARSLIB)
