file(GLOB LEGACY_DMFT_GF_LOCAL_SRC
  GF_COMMON.f90
  GK_MATSUBARA.f90
  GK_REALAXIS.f90
  GLOC_MATSUBARA.f90
  GLOC_REALAXIS.f90
  DMFT_GF.f90
  )
SET(LEGACY_DMFT_GF_src ${LEGACY_DMFT_GF_LOCAL_SRC})
ADD_LIBRARY(LEGACY_DMFT_GFLIB OBJECT ${LEGACY_DMFT_GF_src})
ADD_DEPENDENCIES(LEGACY_DMFT_GFLIB DMFT_CTRL_VARSLIB)
