file(GLOB LEGACY_DMFT_WEISS_FIELD_LOCAL_SRC
  LEGACY_SC_COMMON.f90
  LEGACY_SC_WEISS.f90
  LEGACY_SC_DELTA.f90
  LEGACY_DMFT_WEISS_FIELD.f90  
  )
SET(LEGACY_DMFT_WEISS_FIELD_src ${LEGACY_DMFT_WEISS_FIELD_LOCAL_SRC})
ADD_LIBRARY(LEGACY_DMFT_WEISS_FIELDLIB OBJECT ${LEGACY_DMFT_WEISS_FIELD_src})
ADD_DEPENDENCIES(LEGACY_DMFT_WEISS_FIELDLIB DMFT_CTRL_VARSLIB)
